--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ android:
     - extra-android-support
   licenses:
     - android-sdk-license-.+
-script: ./gradle build check connectedCheck
+script: ./gradlew build check connectedCheck
